# cray

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  run.sh
report/: report.tex
scenes/: 3balls.xml  buddha.xml  cube.xml  dragon.xml  interp.xml  noplane.xml  planetwo.xml  pyramid.xml  rotate.xml  simpleobj.xml  simpleshadow.xml  simplesphere.xml  teapot.xml  textures.xml  twospheres.xml
src/: bbox.hh  bitmap_texture.cc  bitmap_texture.hh  camera.cc  camera.hh  color.cc  color.hh  interval.hh  interval.hxx  kdtree.cc  kdtree.hh  kdtree.hxx  light.cc  light.hh  main.cc  material.cc  material.hh  material.hxx  normaltriangle.cc  normaltriangle.hh  obj.cc  obj.hh  ray.hh  scene.cc  scene.hh  shape.cc  shape.hh  utils.cc  utils.hh  vector.hh  vector.hxx
